force-app/main/default/objects/TubeEndsGroupRelation__c/TubeEndsGroupRelation__c.object-meta.xml
<CustomObject>
    <label>Tube Ends Group Relation</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>AutoNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tube Ends Group Relations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>