force-app/main/default/objects/TubeEndsGroupRelation__c/fields/Tube_Ends_Group__c.field-meta.xml
<CustomField>
    <fullName>Tube_Ends_Group__c</fullName>
    <formula>TEXT(TubeEndsGroup__r.TubeEndsGroup__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tube Ends Group</label>
    <type>Text</type>
</CustomField>