force-app/main/default/objects/TubeEndsGroupRelation__c/fields/TubeEnds__c.field-meta.xml
<CustomField>
    <fullName>TubeEnds__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tube Ends</label>
    <referenceTo>TubeEnds__c</referenceTo>
    <relationshipLabel>Tube Ends Group Relations</relationshipLabel>
    <relationshipName>Tube_Ends_Group_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>