force-app/main/default/objects/TubeEndsGroupRelation__c/fields/TubeEndsGroup__c.field-meta.xml
<CustomField>
    <fullName>TubeEndsGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tube Ends Grp</label>
    <referenceTo>TubeEndsGroup__c</referenceTo>
    <relationshipLabel>Tube Ends Group Relations</relationshipLabel>
    <relationshipName>Tube_Ends_Group_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>